[package]
authors = ["FL03 <jo3mccain@scattered-systems.com> (https://gitlab.com/FL03)"]
categories = []
description = "a serverless application supporting the core functionalities of the Simplicity platform"
edition = "2021"
homepage = "https://github.com/FL03/pzzld-worker/wiki"
keywords = []
license = "Apache-2.0"
name = "pzzld-worker"
readme = "README.md"
repository = "https://github.com/FL03/pzzld-worker"
version = "0.1.0"

[features]
default = ["core"]
full = ["core"]

core = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { optional = true, version = "0.1.7" }
js-sys = { features = [], version = "0.3.60" }
gloo = { features = [], version = "0.8.0" }
pulldown-cmark = "0.9.2"
serde = { features = ["derive"], version = "1.0.149" }  
serde_json = "1.0.89"
tokio = "1.21.1"
wasm-bindgen = { features = ["serde-serialize"], version = "0.2.83" }
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
worker = "0.0.12"

[dependencies.web-sys]
features = []
version = "0.3.60"

[profile.release]
opt-level = "z"

[target.wasm32-unknown-unkown]

[target.wasm32-wasi]
