[package]
authors = ["FL03 <jo3mccain@icloud.com> (https://gitlab.com/FL03)"]
categories = []
description = "a serverless application supporting the core functionalities of the Simplicity platform"
edition = "2021"
homepage = "https://dorc.scattered-systems.com"
keywords = []
license = "MIT"
name = "worker"
repository = "https://gitlab.com/scsys/services/cloudflare-worker"
version = "0.1.0"

[features]
default = ["core"]
full = ["core"]

core = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { optional = true, version = "0.1.7" }
ethers = "0.17.0"
serde_json = "1.0.85"
worker = "0.0.11"

[profile.release]
opt-level = "z"
